AC_INIT(meta_sca, version-0.1)
AC_MSG_NOTICE([Meta-Information Side Channel Attack])
echo "Testing for C compiler"
AC_PROG_CC
AC_LANG(C)
AC_CHECK_HEADERS([stdio.h stdlib.h string.h unistd.h fcntl.h errno.h sys/mman.h sys/stat.h time.h sys/time.h sys/types.h stdint.h unistd.h math.h float.h netinit/in.h linux/ip.h linux/tcp.h pcap/pcap.h errno.h])

